<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    android:background="@color/common_google_signin_btn_text_dark_default">

    <LinearLayout
        android:id="@+id/ActionBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/headerColor"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/leftActionBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/titleActionBar"
                android:layout_width="281dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/instFinsh"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <ImageButton
                android:id="@+id/goBack"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:padding="7dp"
                android:src="@drawable/icon" />

            <TextView
                android:id="@+id/instTrans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/instTrans"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/headerColor" />


            <LinearLayout
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rightActionBar"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal" >

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:id="@+id/contentPart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical" >


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:text="@string/instTrans"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/instTrans"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="normal|bold"
                android:textSize="20sp"
                android:paddingTop="7dp" />

            <LinearLayout
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/common_google_signin_btn_text_dark_focused"
                    android:orientation="vertical">
                </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="73dp">

                <TextView
                    android:layout_width="94dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:gravity="center_vertical"
                    android:textAlignment="textEnd"
                    android:textStyle="normal|bold"
                    android:textSize="17sp"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:text="@string/instNum"
                    android:layout_width="213dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:paddingTop="20dp"
                    android:textSize="17sp"
                    android:textStyle="normal|bold"
                    tools:ignore="InefficientWeight" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="27.86">


                <ImageView
                    android:layout_width="match_parent"
                    android:id="@+id/imageView"
                    android:src="@drawable/instructions"
                    android:layout_weight="62.42"
                    android:layout_height="230dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="90dp">

                    <TextView
                        android:text="@string/instEnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView4"
                        android:layout_weight="321.44"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="normal|bold"
                        android:paddingTop="20dp"
                        android:textSize="20sp" />

                    <TextView
                        android:text="@string/instPolice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView5"
                        android:layout_weight="321.44"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="normal|bold"
                        android:textSize="20sp" />



                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="321.44">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/emblemofisraelpolice"
                        android:id="@+id/imageView7"
                        android:layout_weight="321.44"
                        tools:ignore="ObsoleteLayoutParam" />

                    <Button
                        android:text="סיים"
                        android:id="@+id/finishButton"
                        android:background="@color/colorPrimaryDark"
                        android:textColor="@color/common_google_signin_btn_text_dark_default"
                        android:textStyle="normal|bold"
                        android:layout_width="match_parent"
                        android:gravity="center_vertical|center"
                        tools:ignore="HardcodedText"
                        android:layout_weight="123.98"
                        android:textAlignment="center"
                        android:layout_height="40dp"
                        android:layout_marginLeft="80dp"
                        android:layout_marginRight="80dp"
                        android:layout_marginTop="28dp"
                        android:layout_below="@+id/imageView7"
                        android:layout_centerHorizontal="true" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
    </ScrollView>

</LinearLayout>


